solve checkbox mark on mobile

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ main {
 	background-color: var(--bg-color);
 	border-radius: 12px;
 	padding: 15px 20px;
+	min-width: 420px;
 }
 
 button {
@@ -223,29 +224,42 @@ h2 {
 }
 /*--- moves counter ---*/
 #move-counter {
-	min-width: 40px;
+	min-width: 35px;
 	text-align: center;
 }
 
+/* --- Guided mode --- */
+#guided-mode-label {
+	display: flex;
+	align-items: center;
+	white-space: nowrap;
+	font-size: 16px;
+}
 #guided-mode-checkbox {
 	-webkit-appearance: none;
 	appearance: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	border: 2px solid var(--dark);
-	padding: 10px 10px;
+	width: 18px;
+	height: 18px;
+	margin: 0 3px 0 0;
 	border-radius: 3px;
-	display: inline-block;
-	position: relative;
+	cursor: pointer;
 }
 
 #guided-mode-checkbox:checked {
 	border: 2px solid var(--dark);
-	padding: 1px 3px;
+	padding: 0;
+	background-color: var(--dark);
+	color: var(--bg-color);
 }
 
-#guided-mode-checkbox:checked:after {
-	content: '\2714';
+#guided-mode-checkbox:checked::after {
+	content: '\2713';
 	font-size: 16px;
-	color: var(--dark);
+	color: var(--bg-color);
 }
 
 /*** Main game board style ***/
